# primordialpy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/Chaotic/: Chaotic.ipynb
examples/Chaotic/Data/: background_data.txt  power_spectrum.txt  power_spectrum_data.txt
examples/Higgs/: Higgs.ipynb  power_spectrum.txt
examples/Higgs/Data/: background_data.txt  power_spectrum.txt  power_spectrum_data.txt
examples/KKLT/: KKLT.ipynb  power_spectrum.txt
examples/KKLT/Data/: background_data.txt  power_spectrum_data.txt
examples/Natural/: Natural.ipynb
examples/PBHs/KKLT_bump_case1/: KKLT_bump_case1.ipynb
examples/PBHs/KKLT_bump_case1/Data/: abundance_PBHs_data.txt  background_data.txt  power_spectrum_data.txt
examples/PBHs/KKLT_bump_case2/: KKLT_bump.ipynb
examples/PBHs/KKLT_bump_case2/Data/: abundance_PBHs_data.txt  background_data.txt  power_spectrum_data.txt
examples/PBHs/alpha_attractor-case1/: alpha_attractor_PBH.ipynb
examples/PBHs/alpha_attractor-case2/: alpha_attractor-case2.ipynb
examples/PBHs/alpha_attractor-case3/: alpha_attractor-case3.ipynb
examples/PBHs/alpha_attractor_1/: alpha_attractor1.ipynb
examples/PBHs/critical_higgs/: critical_higgs.ipynb
examples/PBHs/starobinsky_bump/: starobinksky_bump.ipynb
examples/PBHs/starobinsky_gaussian_bump/: starobinsky_gaussian_bump.ipynb
examples/Starobinsky/: Starobinsky.ipynb
examples/Starobinsky/Data/: background_data.txt  power_spectrum_data.txt
examples/T-model/: T-model.ipynb  power_spectrum.txt
examples/T-model/data/: background_data.txt  power_spectrum_data.txt
paper/: SciPostPhysCodeb.aux  SciPostPhysCodeb.bbl  SciPostPhysCodeb.blg  SciPostPhysCodeb.fdb_latexmk  SciPostPhysCodeb.fls  SciPostPhysCodeb.out  SciPostPhysCodeb.tex  SciPostPhysCodeb.toc  SciPost_Example_BiBTeX_File.bib  biblio.bib
primordialpy/: background.py  background_cosmic_time.py  constraints.py  model.py  pbhabundance.py  perturbations.py  plot_style.py  style.mplstyle
tests/: test_inflation.py
(+22 files in other folders)
