[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primordialpy"
version = "0.1.0"
description = "A Python library for computing inflationary dynamics, primordial perturbations and PBHs abundances from any single-field inflation model"
readme = "README.md"
# Relajé un poco la versión a 3.9 general, es más estándar que especificar el patch .6
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Flavio Joao Pineda Arvizu", email = "fpineda@xanum.uam.mx"}
]
keywords = ["cosmology", "inflation", "primordial black holes", "PBH", "power spectrum", "astrophysics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# --- AQUÍ ESTABAN LOS FALTANTES ---
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scipy>=1.7.0",
    "sympy>=1.8.0",
    "joblib>=1.0.0",   # Necesario para el paralelismo
    "tqdm>=4.60.0",    # Necesario para la barra de progreso
]

[project.urls]
Homepage = "https://github.com/fpineda94/primordialpy"
Repository = "https://github.com/fpineda94/primordialpy"
Issues = "https://github.com/fpineda94/primordialpy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "build", 
    "twine"
]

# --- ESTO ES CRÍTICO PARA TU ARCHIVO DE ESTILO ---
[tool.setuptools]
packages = ["primordialpy"]

[tool.setuptools.package-data]
# Esto le dice a pip: "Dentro de la carpeta primordialpy, incluye cualquier archivo .mplstyle"
primordialpy = ["*.mplstyle", "stylelib/*.mplstyle"]